--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.7",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "paypal/rest-api-sdk-php": "*",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
