--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "@chenfengyuan/vue-carousel": "^2.0.0",
+        "@chinhpd/vue3-grid-images": "^1.0.3",
+        "@morioh/v-lightbox": "^1.0.3",
+        "vue-3-simple-progress-bar": "^1.0.4",
+        "vue-multiple-progress": "^1.6.0",
+        "vue-tabler-icons": "^2.6.0",
+        "vue3-popper": "^1.5.0"
     }
 }
